RESOLVED FIXED168095
Web Automation: fail gracefully when a screenshot cannot be encoded as base64
https://bugs.webkit.org/show_bug.cgi?id=168095
Summary Web Automation: fail gracefully when a screenshot cannot be encoded as base64
Blaze Burg
Reported 2017-02-09 17:13:52 PST
Attachments
Proposed Fix (4.95 KB, patch)
2017-02-09 22:27 PST, Blaze Burg
no flags
Blaze Burg
Comment 1 2017-02-09 22:27:07 PST
Created attachment 301133 [details] Proposed Fix
Joseph Pecoraro
Comment 2 2017-02-09 22:32:01 PST
Comment on attachment 301133 [details] Proposed Fix r=me. When can we not base64? Could we write a test for this?
Blaze Burg
Comment 3 2017-02-10 09:01:30 PST
(In reply to comment #2) > Comment on attachment 301133 [details] > Proposed Fix > > r=me. When can we not base64? Could we write a test for this? Unsure of how to reproduce this, but we have seen some crash reports to suggest it could happen. My guess is that the screenshot is too big to fit in memory for some reason–large web page or low memory or both.
WebKit Commit Bot
Comment 4 2017-02-10 09:27:10 PST
Comment on attachment 301133 [details] Proposed Fix Clearing flags on attachment: 301133 Committed r212115: <http://trac.webkit.org/changeset/212115>
WebKit Commit Bot
Comment 5 2017-02-10 09:27:13 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.